--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacman</title>
 </head>
-<body>   
+<body style="background-color: #000; margin:0px">   
     <canvas id="canvas" width="500" height="500"></canvas>
     <div style="display:none">
         <img id="animation" src="assets/animations.gif" alt="">
         <img id="ghosts" src="assets/ghost.png">
     </div>   
-    <script src="ghost.js"></script>
+    <script src="ghost.js"></script>    
     <script src="pacman.js"></script>
-    <script src="game.js"></script>    
+    <script src="game.js"></script> 
+       
 </body>
 </html>
