FEA: added ghosts creation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacman</title>
 </head>
-<body style="background-color: #000; margin:0px">   
+<body style="background-color: #000; margin:0px; overflow: hidden;">   
     <canvas id="canvas" width="500" height="500"></canvas>
     <div style="display:none">
         <img id="animation" src="assets/animations.gif" alt="">
@@ -18,3 +18,4 @@
        
 </body>
 </html>
+<!-- 51:18-->
