BUG- ghost bug yet

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <img id="animation" src="assets/animations.gif" alt="">
         <img id="ghosts" src="assets/ghost.png">
     </div>   
-    <script src="ghost.js"></script>    
     <script src="pacman.js"></script>
+    <script src="ghost.js"></script>   
     <script src="game.js"></script> 
        
 </body>
 </html>
-<!-- 51:18-->
+<!-- 1:01:00 bug do ghost está rolando undefined-->
